@@ -614,6 +614,9 @@ Release 1.2.0 - unreleased
 
     HADOOP-9492. Update testConf.xml for HADOOP-9473.  (Jing Zhao via szetszwo)
 
+    HADOOP-9502. chmod/chown do not return error exit codes for some exceptions.
+    (szetszwo)
+
 Release 1.1.2 - 2013.01.30
 
   INCOMPATIBLE CHANGES
